--- a/apps/web/src/locales/fr.json
+++ b/apps/web/src/locales/fr.json
@@ -1,12 +1,6 @@
 {
   "Home": "Accueil",
   "locales": {
-    "assets": {
-      "metadata": {
-        "capacity": "Capacité",
-        "numberplate": "Numéro de Plaque"
-      }
-    },
     "bulkImport": {
       "browse": "Glissez et déposez ou sélectionnez votre fichier",
       "description": "Vous pouvez importer des actifs ainsi que des capteurs en lot en utilisant un fichier CSV afin d'automatiser la création.",
@@ -15,9 +9,9 @@
       "log": {
         "asset-created": "Actif {assetModel} {assetReference} créé",
         "csv-parse-error": "Erreur lors de l'analyse du fichier CSV ! Veuillez vérifier votre fichier et réessayer.",
-        "device-created": "Capteur {deviceModel} {deviceReference} crée",
+        "device-created": "Capteur {deviceModel} {deviceReference} créé",
         "device-link-to-another-tenant": "Capteur {deviceModel} {deviceReference} déjà lié au client {otherTenant}, sautée (L{lineNumber})",
-        "device-linked": "Capteur {{deviceModel} {deviceReference} lié à l'actif {assetModel} {assetReference}",
+        "device-linked": "Capteur {deviceModel} {deviceReference} lié à l'actif {assetModel} {assetReference}",
         "invalid": "Ligne {lineNumber} invalide, sautée",
         "metadata-updated": "{type} {model} {reference} trouvé, mise à jour des métadonnées",
         "orphan-device-link": "Capteur {deviceModel} {deviceReference} trouvé dans les capteurs orphelins, liaison au client actuel ({currentIndex})"
@@ -43,7 +37,6 @@
       "doc": "Détails sur la Documentation",
       "datasheet": "Technique (Datasheet)",
       "decoder": "Provisionner un capteur",
-      "decoderDescription": "Provisionnez un nouveau Capteur avec son Décodeur en renseignant son Modèle et sa Référence. Le Modèle doit correspondre à un Décodeur actuellement installé sur la Plate-forme, alors que la Référence est un ID unique que vous pouvez choisir arbitrairement.",
       "edit": "Modifier",
       "empty": "Aucune information à afficher",
       "emptyLinkedAsset": "Cliquez ici pour lier un Actif",
@@ -52,16 +45,15 @@
       "linkedAsset": "Actif lié",
       "link": "Lien",
       "measureType": "Type de mesure",
-      "measuresHistory": "Historique de mesures",
       "measures": "Mesures",
-      "metadata": "Métadonées",
+      "metadata": "Métadonnées",
       "model": "Modèle",
       "manufacturer": "Constructeur",
       "network": "Réseaux",
       "power": "Source d'Alimentation",
       "reference": "Référence",
       "sales": "Commercial",
-      "technical": "Details Techniques",
+      "technical": "Détails Techniques",
       "type": "Type",
       "title": "Catalogue de Capteurs IoT",
       "unknown-link": "Lien non disponible"
@@ -72,63 +64,18 @@
         "createDescription": "Provisionnez un nouveau Capteur avec son Décodeur en renseignant son Modèle et sa Référence. Le Modèle doit correspondre à un Décodeur actuellement installé sur la Plate-forme, alors que la Référence est un ID unique que vous pouvez choisir arbitrairement."
       }
     },
-    "labels": {
-      "illuminance": "Éclairement",
-      "lux": "Lux",
-      "parts per million": "Parties par million"
-    },
     "sidebar": {
       "bulkImport": "Import en lot",
       "catalog": "Catalogue"
     },
     "widget": {
       "common": {
-        "allDrivers": "Tous les drivers",
-        "asset-model": "Modèle d'Actif",
-        "street-name": "Rue",
-        "cant-search-asset": "Désolé, vous n'avez pas les droits de lister les actifs",
-        "chooseDriver": "Choisissez le driver",
-        "chooseLamp": "Choisissez un lampadaire",
-        "days": ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi", "Dimanche"],
-        "error": "Erreur",
-        "maxLevel": "Niveau maximum",
-        "minLevel": "Niveau minimum",
-        "no-kara-devices-linked": "Aucun capteur Kara n'est lié à l'asset",
-        "no-time": "Aucun temps sélectionné",
-        "ok": "Ok",
-        "see-asset": "Voir l'asset",
-        "send": "Envoyer",
-        "sent": "Envoyé",
-        "sent-successfully": "Action envoyé au capteur Kara avec succès"
+        "asset-model": "Modèle d'Actif"
       },
-      "level": {
-        "title": "Régler la puissance d'un lampadaire",
-        "label": "Niveau de luminosité"
-      },
-      "on-off": {
-        "apply": "L'action prend effet",
-        "immediate": "Immédiatement",
-        "on": "Allumer",
-        "off": "Éteindre",
-        "scheduled": "En différé",
-        "title": "Allumage / Extinction d'un lampadaire",
-        "executionTime": "Heure d'éxécution",
-        "label": "Activé / Désactivé"
-      },
-      "scheduler": {
-        "chooseMode": "Choisissez le mode de période",
-        "end": "Date/Heure de Fin",
-        "modes": {
-          "daily": "Quotidien",
-          "single": "Unique"
-        },
-        "repeat": "Répéter chaque année",
-        "start": "Date/Heure de Début",
-        "title": "Planifier l'allumage d'un lampadaire"
-      },
-      "status-map": {
-        "empty-form": "Le formulaire est vide. Rien à afficher",
-        "label": "Carte de Statut"
+      "sampleWidget": {
+        "title": "Ceci est un widget d'exemple",
+        "label": "Widget d'exemple",
+        "buckettingField": "Champ de regroupement :"
       }
     }
   }
